@@ -6,8 +6,8 @@
 static int
 InstallGeoTIFF(const char *geofile, const char *tiffile)
 {
-    TIFF *tif = (TIFF*)0; /* TIFF-level descriptor */
-    GTIF *gtif=(GTIF*)0; /* GeoKey-level descriptor */
+    TIFF *tif; /* TIFF-level descriptor */
+    GTIF *gtif; /* GeoKey-level descriptor */
     FILE *fp;
 
     uint16 *panVI = NULL;
